<resources>

    <string name="app_name">SchoolFuel</string>

    <string name="sign_in_order_now"><![CDATA[Sign In & order now!]]></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="no_account">No account?</string>
    <string name="signup">Sign Up</string>
    <string name="repeat_password">Repeat password</string>
    <string name="have_account">Have account?</string>
    <string name="sign_up_order_now"><![CDATA[Sign up & get your food!]]></string>
    <string name="bad_internet_connection_please_try_again_later">Bad internet connection, please try again later</string>
    <string name="password_length_must_be_more_than_6_characters_and_without_space">Password length must be more than 6 characters and without space</string>
    <string name="email_incorrect">Email Incorrect</string>
    <string name="food_menu">Food Menu</string>
    <string name="profile">Profile</string>
    <string name="cart">Cart</string>
    <string name="exit">Exit Account</string>
    <string name="search">Search</string>
    <string name="price">Price:</string>
    <string name="_0_0">0.0₪</string>
    <string name="to_cart">To Cart</string>
    <string name="pay_now">Pay Now</string>
    <string name="my_cart">My Cart</string>
    <string name="total_price">Total Price:</string>
    <string name="profile_fragment">Profile</string>
    <string name="your_name">Your name</string>
    <string name="my_account">My Account</string>
    <string name="make_changes_to_your_account">Make changes to your account</string>
    <string name="order_history">Order History</string>
    <string name="track_your_past_orders_effortlessly">Track your past orders effortlessly</string>
    <string name="log_out">Log Out</string>
    <string name="further_secure_your_account_for_safety">Further secure your account for safety</string>
    <string name="more">More</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="choose_your_preferred_payment_option">Choose your preferred payment option</string>
    <string name="help_amp_support"><![CDATA[Help & Support]]></string>
    <string name="completed_order">Completed Order</string>
    <string name="in_process">In Process</string>
    <string name="cancelled_order">Cancelled Order</string>
    <string name="payment_method_card">Payment Method: Card</string>
    <string name="payment_method_cash">Payment Method: Cash</string>
    <string name="payment_method">PAYMENT METHOD</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="google_pay">Google Pay</string>
    <string name="bank_cards">Bank Cards</string>
    <string name="add_card_gift_card">Add card / gift card</string>
    <string name="more_txt">More</string>
    <string name="cash_on_delivery">Cash on delivery</string>
    <string name="meals">Meals</string>
    <string name="snacks">Snacks</string>
    <string name="drinks">Drinks</string>
    <string name="my_favorites">My Favorites</string>
    <string name="track_your_favorites_dishes">Track your favorites dishes</string>
    <string name="all">All</string>
    <string name="add">Add</string>
    <string name="our_menu">Our Menu</string>
    <string name="payment_processing">Payment processing</string>
    <string name="user_registration_successfully_please_verify_your_email">User registration successfully\nPlease verify your email</string>
    <string name="user_registration_failed">User registration failed</string>
    <string name="do_you_want_to_delete_this_dish_from_the_cart">Do you want to delete this dish from the cart?</string>
    <string name="delete_dish">Delete dish?</string>
    <string name="please_verify_your_email">Please verify your email</string>
    <string name="login_failed">"Login failed: "</string>
    <string name="failed_to_save_user_data_please_try_again">Failed to save user data. Please try again</string>
    <string name="please_enter_your_registered_email_to_reset_your_password">Please enter your registered email to reset your password.</string>
    <string name="email_cannot_be_empty">Email cannot be empty</string>
    <string name="reset_email_sent_successfully_to">"Reset email sent successfully to "</string>
    <string name="password_length_must_be_more_than_6_symbols_and_without_spaces">Password length must be more than 6 symbols and without spaces</string>
    <string name="password_must_be_the_same">Password must be the same</string>
    <string name="registration_successful_verification_email_sent">Registration successful! Verification email sent</string>


</resources>
