<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.LoginFragment">

    <ImageView
        android:id="@+id/picture_logo"
        android:layout_width="291dp"
        android:layout_height="291dp"
        android:layout_gravity=""
        android:layout_margin="60dp"
        android:contentDescription="TODO"
        android:src="@drawable/burger_img_svg"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_margin="40dp"
        android:text="@string/sign_in_order_now"
        android:textSize="36sp"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etEmail"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="420dp"
        android:layout_marginRight="20dp"
        android:text="@string/email"
        android:textSize="22sp"
        android:textStyle="bold"
        />
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/etPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="500dp"
        android:layout_marginRight="20dp"
        android:text="@string/password"
        android:textSize="22sp"
        android:textStyle="bold"
        android:drawableEnd="@drawable/eye_closed_img_svg"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="575dp"
        android:layout_marginRight="20dp"
        android:background="@color/main_color"
        android:text="@string/sign_in"
        android:textColorLink="@color/main_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:cornerRadius="100dp"/>
    //TextView будет кнопка
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:id="@+id/tvButtonForgot"
        android:textSize="16sp"
        android:gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="635dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textSize="16sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="675dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="37dp"
        />
    //TextView будет кнопка
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="220dp"
        android:layout_marginTop="675dp"
        android:layout_marginRight="10dp"
        android:text="@string/signup"
        android:textColor="@color/main_color"
        android:textSize="16sp"
        android:textStyle="bold"
        android:id="@+id/tvButtonSignUp"/>


</FrameLayout>