<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="24dp"
    tools:context=".fragment.ProfileFragment">
    <!--Text Profile-->
    <TextView
        android:id="@+id/tvProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/profile_fragment"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <!--User Card-->
    <LinearLayout
        android:id="@+id/cardUser"
        android:layout_width="match_parent"
        android:layout_height="96dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/blue_card_background"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/tvProfile">
        <!--Avatar circle-->
        <androidx.cardview.widget.CardView
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            app:cardCornerRadius="36dp">
            <!--Circle-->
            <ImageView
                android:id="@+id/ivAvatar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white" />
        </androidx.cardview.widget.CardView>
        <!--Text your name-->
        <EditText
            android:id="@+id/etYourName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:text="@string/your_name"
            android:paddingVertical="4dp"
            android:background="@null"
            android:enabled="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold" />
        <!--image Pencil - Edit profile-->
        <ImageView
            android:id="@+id/ivPencil"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:layout_marginEnd="16dp"
            android:src="@drawable/baseline_edit_24"
            app:tint="@color/white" />
    </LinearLayout>

    <!--General Card-->
    <LinearLayout
        android:id="@+id/GeneralCardLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_stroke_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cardUser">

        <!--Card Order History-->
        <LinearLayout
            android:id="@+id/myOrderHistoryLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_history_24"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order_history"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/track_your_past_orders_effortlessly"
                    android:textColor="@color/grey_text_profile"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/grey_stripe" />

        <LinearLayout
            android:id="@+id/myFavoritesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_favorite_border_24"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/my_favorites"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/track_your_favorites_dishes"
                    android:textColor="@color/grey_text_profile"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/grey_stripe" />

        <LinearLayout
            android:id="@+id/PaymentMethodLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_payment_24"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/payment_methods"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_your_preferred_payment_option"
                    android:textColor="@color/grey_text_profile"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="8dp"
            android:background="@color/grey_stripe" />
        <!--Card Log Out-->
        <LinearLayout
            android:id="@+id/logOutLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_logout_24"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/further_secure_your_account_for_safety"
                    android:textColor="@color/grey_text_profile"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvMore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/inter_semibold"
        android:text="@string/more"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/GeneralCardLayout" />
    <!--Card More-->
    <LinearLayout
        android:id="@+id/MoreLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/card_stroke_background"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMore">
        <!--Card Payment Methods-->


        <!--Card Help & Support-->
        <LinearLayout
            android:id="@+id/HelpAndSupportLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_margin="16dp"
                android:src="@drawable/baseline_headset_mic_24"
                app:tint="@color/black" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/help_amp_support"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/ivTelegram"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:src="@drawable/telegram_logo"
                android:layout_gravity="center"/>
            <View
                android:layout_width="16dp"
                android:layout_height="match_parent"/>

            <ImageView
                android:id="@+id/ivWhatsapp"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/whatsapp_logo"
                android:layout_gravity="center"/>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>