<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/ivArrowBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_arrow_back_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/ivEditPayment"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_margin="16dp"
        android:src="@drawable/baseline_edit_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvPaymentMethod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:fontFamily="@font/inter_semibold"
        android:gravity="center"
        android:text="@string/payment_method"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivArrowBack" />

    <View
        android:id="@+id/stripe"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey_stripe"
        app:layout_constraintTop_toBottomOf="@+id/tvPaymentMethod" />



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/stripe">


        <LinearLayout
            android:id="@+id/applePayLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/apple_pay_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/apple_pay"
                android:textSize="21sp" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="82dp"
            android:layout_marginEnd="24dp"
            android:layout_marginTop="8dp"
            android:background="@color/grey_stripe" />

        <LinearLayout
            android:id="@+id/googlePayLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/google_pay_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/google_pay"
                android:textSize="21sp" />



        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="12dp"

            android:backgroundTint="@color/grey_stripe"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bank_cards"
                android:layout_marginStart="16dp"
                android:textSize="21sp"
                android:textColor="@color/grey_text_order_history"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/addCardPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="50dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/grey_stripe"
                app:cardCornerRadius="8dp">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="25dp"
                    android:layout_gravity="center"
                    android:src="@drawable/baseline_add_24" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/add_card_gift_card"
                android:textSize="21sp" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="16dp"

            android:backgroundTint="@color/grey_stripe"
            app:cardCornerRadius="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/more_txt"
                android:layout_marginStart="16dp"
                android:textSize="21sp"
                android:textColor="@color/grey_text_order_history"/>
        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/cashPayment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:src="@drawable/google_pay_svgrepo_com" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:text="@string/cash_on_delivery"
                android:textSize="21sp" />
        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvPaymentMethod">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"/>
        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="148dp"/>

    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>